--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.NewsApp"
+        android:theme="@style/Theme.Design.NoActionBar"
         android:usesCleartextTraffic="true">
-        <activity android:name=".News_Information"></activity>
+        <activity android:name=".HomeActivity"></activity>
+        <activity android:name=".News_Information" />
         <activity android:name=".News_Main" />
         <activity android:name=".MainActivity">
             <intent-filter>
